--- a/html_proto/package.json
+++ b/html_proto/package.json
@@ -8,9 +8,12 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.5",
-    "react": "^19.1.0",
+    "bootstrap-icons": "^1.11.3",
+    "mdb-react-ui-kit": "^9.0.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "sass": "^1.87.0",
     "web-vitals": "^2.1.4"
