--- a/html_proto/public/manifest.json
+++ b/html_proto/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Teejuht",
+  "name": "Koht, kus saad anonüümselt pakkuda või küsida nõu ja abi!",
   "icons": [
     
   ],
