final minor fixes that caused errors on the server

--- a/html_proto/package.json
+++ b/html_proto/package.json
@@ -2,7 +2,7 @@
   "name": "html_proto",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://turing.cs.ttu.ee/~arajas/iti0209",
+  "homepage": "/~arajas/iti0209",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
